added the property field on constraint violation class